fix bug z-index navbar

--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,6 @@
+#nav{
+  z-index: 100;
+}
 #nav .container-lg {
     background-color: rgba(255, 255, 255, 0.623);
     padding: 10px;
@@ -160,6 +163,15 @@
     }
   }
   @media (max-width: 992px) {
+    #nav{
+      transition: 0.5s;
+    }
+    .nav-m{
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.507);
+    }
     #nav .navbar-brand {
       margin-left: 20px;
     }
